This file records noteworthy changes.

1.2.2 (<date>)
* Added const_preorder_iterator and const_postorder_iterator classes (and
  associated methods ex::pre/postorder_begin/end()) providing tree traversal
  with iterators.
* Fixed the LaTeX output of the varidx class.
* Symbolic functions without any eval(), evalf() etc. functions now work
  properly.
* Added method matrix::rank().

1.2.1 (23 April 2004)
* Fixed infinite recursion in atan2_evalf() and improved atan2_eval().
* Added automatic evaluations for trigonometric functions with negative
  arguments (e.g. sin(-2) -> -sin(2)).
* Fixed a static initialization order goof-up.
* Fixed various bugs in series expansion.

1.2.0 (19 March 2004)
* Added a structure<T> template class for the easy creation of user-defined
  algebraic classes.
* Added support for (acyclic) visitors, to allow cleaner implementations of
  algebraic algorithms.
* Added a const_iterator class that can be used instead of op()/nops().
* Completely revamped the implementation of expression output. It is now
  possible to add new output formats, to change the behavior of predefined
  formats at run-time, and to have different output styles for algebraic
  functions.
* Symbols can be made non-commutative.
* Added a method ex::conjugate() and a function conjugate() for complex
  conjugation. Symbols can be declared as real or complex-valued.
* Improved the speed of subs(), normal(), to_rational() and to_polynomial()
  by the use of maps instead of lists. The old forms
    subs(const lst & ls, const lst & lr, unsigned options)
    to_rational/to_polynomial(lst & repl)
  are still available for compatibility, but using the new forms
    subs(const exmap & m, unsigned options)
    to_rational/to_polynomial(exmap & repl)
  is more efficient, especially when the number of replacements is large.
* quo(), rem(), prem(), sprem(), decomp_rational(), unit(), content(),
  primpart() and matrix::charpoly() now take a "const ex &" instead of a